--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 streamlit
+google-generativeai
+langchain-google-genai
+langchain
 pandas
 numpy
 scikit-learn
-langchain-google-genai
-langchain
 python-dotenv
 plotly
+matplotlib
+seaborn
